--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -138,33 +138,33 @@
   --tw-scale-x: 1;
   --tw-scale-y: 1;
 
-  &::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
-
-  &::-webkit-scrollbar-corner {
-    background-color: transparent;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: hsl(var(--scroll-bar));
-
-    &:hover {
-      background-color: hsl(var(--scroll-bar-hover));
-    }
-  }
-
-  &::-webkit-scrollbar-track {
-    background-color: transparent;
-  }
-
-  &::-webkit-scrollbar-thumb,
-  &::-webkit-scrollbar-track {
-    border-radius: 7px;
-    border: 4px solid transparent;
-    //background-clip: padding-box;
-  }
+  //&::-webkit-scrollbar {
+  //  width: 8px;
+  //  height: 8px;
+  //}
+  //
+  //&::-webkit-scrollbar-corner {
+  //  background-color: transparent;
+  //}
+  //
+  ////&::-webkit-scrollbar-thumb {
+  ////  background-color: hsl(var(--scroll-bar));
+  ////
+  ////  &:hover {
+  ////    background-color: hsl(var(--scroll-bar-hover));
+  ////  }
+  ////}
+  //
+  //&::-webkit-scrollbar-track {
+  //  background-color: transparent;
+  //}
+  //
+  //&::-webkit-scrollbar-thumb,
+  //&::-webkit-scrollbar-track {
+  //  border-radius: 7px;
+  //  border: 4px solid transparent;
+  //  //background-clip: padding-box;
+  //}
 }
 
 body {
