--- a/src/styles/(lobby)/_components/faculty.module.scss
+++ b/src/styles/(lobby)/_components/faculty.module.scss
@@ -1,12 +1,10 @@
 .faculty-wrapper {
   position: relative;
-
   padding: 4rem 0;
 }
 
 .faculty-container {
   width: 100%;
-
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   margin-right: auto;
@@ -75,5 +73,51 @@
     }
   }
 }
+.faculty-card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+.faculty-card {
+  position: relative;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-bottom: 30px;
+  @media (min-width: 768px) {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 33%;
+    flex: 0 0 33%;
+    max-width: 33%;
+  }
+}
 
+.faculty-card-img {
+  width: 100%;
+  height: 300px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.faculty-card-content {
+  padding-top: 1.5rem !important;
+}
 
+.faculty-card-info {
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 600;
+}
+.faculty-card-submit-btn {
+  cursor: pointer;
+  background: #fd5f00;
+  border: 1px solid #fd5f00;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 40px;
+  display: inline-block;
+  font-weight: 400;
+  padding: 6px 4px;
+}
