--- a/src/styles/(lobby)/_components/faculty.module.scss
+++ b/src/styles/(lobby)/_components/faculty.module.scss
@@ -73,51 +73,72 @@
     }
   }
 }
+
 .faculty-card-wrapper {
   display: flex;
   flex-wrap: wrap;
+
   margin-right: -15px;
   margin-left: -15px;
 }
+
 .faculty-card {
   position: relative;
+
   width: 100%;
+
   padding-right: 15px;
   padding-left: 15px;
   margin-bottom: 30px;
+
   @media (min-width: 768px) {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 33%;
     flex: 0 0 33%;
+
     max-width: 33%;
   }
 }
 
 .faculty-card-img {
-  width: 100%;
-  height: 300px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-.faculty-card-content {
-  padding-top: 1.5rem !important;
+  img {
+    width: 100%;
+    height: 300px;
+
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
 }
 
-.faculty-card-info {
-  font-size: 12px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-weight: 600;
+.faculty-card-content {
+  padding-top: 1.5rem;
+
+  h3 {
+    margin-bottom: 0.5rem;
+
+    font-size: 24px;
+    line-height: 1.5;
+    font-weight: 500;
+  }
+
+  p {
+    margin-bottom: 1rem;
+  }
 }
-.faculty-card-submit-btn {
-  cursor: pointer;
-  background: #fd5f00;
-  border: 1px solid #fd5f00;
-  color: #fff;
-  cursor: pointer;
-  border-radius: 40px;
-  display: inline-block;
+
+.view {
+  color: #fff !important;
+  background: #fd5f00 !important;
+
+  border: 1px solid #fd5f00 !important;
+
+  padding: 6px 4px !important;
+
   font-weight: 400;
-  padding: 6px 4px;
+
+  &:hover {
+    color: #fd5f00 !important;
+    background: transparent !important;
+
+    border: 1px solid #fd5f00 !important;
+  }
 }
