--- a/src/styles/components/auth/oauth-signin.module.scss
+++ b/src/styles/components/auth/oauth-signin.module.scss
@@ -5,10 +5,10 @@
   grid-template-columns: repeat(1,minmax(0,1fr));
   gap: 0.5rem;
 
-  @media (min-width: 640px) {
-    grid-template-columns: repeat(2,minmax(0,1fr));
-    gap: 1rem;
-  }
+  //@media (min-width: 640px) {
+  //  grid-template-columns: repeat(2,minmax(0,1fr));
+  //  gap: 1rem;
+  //}
 }
 
 .icons {
