--- a/src/styles/components/layouts/site-footer.module.scss
+++ b/src/styles/components/layouts/site-footer.module.scss
@@ -1,7 +1,7 @@
 .footer-wrapper {
   background: #232323;
 
-  padding: 6rem 0 3rem 0;
+  padding: 4rem 0 0 0;
 
   font-size: 14px;
 }
@@ -36,7 +36,7 @@
   justify-content: center;
   flex-wrap: wrap;
 
-  margin-bottom: 3rem;
+  //margin-bottom: 3rem;
   margin-right: -15px;
   margin-left: -15px;
 }
