--- a/src/styles/components/editor.module.scss
+++ b/src/styles/components/editor.module.scss
@@ -36,3 +36,25 @@
 .editor {
   min-height: 500px;
 }
+
+.form {
+  display: flex;
+  align-items: center;
+
+  gap: 0.5rem;
+}
+
+.popover-content {
+  width: auto !important;
+
+  padding: 0 !important;
+}
+
+.calendar-icon {
+  width: 1rem;
+  height: 1rem;
+
+  margin-left: 0.3rem;
+
+  opacity: 0.5;
+}
