feat: add submission for student

--- a/src/styles/components/ui/input.module.scss
+++ b/src/styles/components/ui/input.module.scss
@@ -32,11 +32,11 @@
     max-width: 20rem;
 
     &::file-selector-button {
-      font-weight: 600;
+      background-color: transparent;
 
-      &:hover {
-        background-color: hsl(var(--input));
-      }
+      border: 0;
+
+      font-weight: 600;
     }
   }
 }
