--- a/src/styles/(magazine)/page.module.scss
+++ b/src/styles/(magazine)/page.module.scss
@@ -1,3 +1,9 @@
+.magazine {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
 .magazine-wrapper {
   background-color: hsl(var(--accent));
 
@@ -53,4 +59,77 @@
 
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.submission-zone {
+  width: 100%;
+  height: fit-content;
+
+  border-radius: calc(0.5rem - 4px);
+
+  margin-top: 1rem;
+}
+
+.submission-table {
+  width: 100%;
+
+  margin-bottom: 1rem;
+
+  border-collapse: collapse;
+
+  overflow-x: auto;
+  overflow-y: visible;
+
+  tr:nth-of-type(odd) {
+    background-color: hsl(var(--muted) / 0.9);
+  }
+
+  th {
+    width: 200px;
+  }
+
+  th,
+  td {
+    padding: 0.75rem;
+
+    vertical-align: top;
+
+    border-top: 1px solid #dee2e6;
+  }
+
+  td[data-submit="true"] {
+    color: hsl(180.54, 100%, 21.96%);
+    background-color: hsl(117.14, 51.22%, 91.96%);
+  }
+}
+
+.files-submission {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.file {
+  background-color: transparent;
+
+  border-radius: calc(0.5rem - 2px);
+
+  padding: 0.5rem 1rem;
+
+  transition-property:
+    color,
+    background-color,
+    border-color,
+    text-decoration-color,
+    fill,
+    stroke,
+    -webkit-text-decoration-color;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 0.15s;
+
+  &:hover {
+    color: hsl(182.07,17.16%,33.14%);
+    background-color: hsl(117,22.22%,82.35%);
+  }
 }
