--- a/src/styles/components/faculty-workspace.module.scss
+++ b/src/styles/components/faculty-workspace.module.scss
@@ -45,11 +45,18 @@
 }
 
 .item-datetime {
+  display: flex;
+
   color: hsl(var(--muted-foreground));
 
-  font-size: .875rem;
+  font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 500;
+
+  span {
+    display: block;
+    width: 140px;
+  }
 }
 
 .submission-status {
@@ -65,9 +72,21 @@
 
   padding: 0.125rem 0.625rem;
 
-  font-size: .875rem;
+  font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 500;
 
   text-transform: capitalize;
+
+  &[data-submit="Submitted"] {
+    color: hsl(180.54, 100%, 21.96%);
+    background-color: hsl(180, 38.78%, 90.39%);
+  }
+}
+
+.contribution-count {
+  @extend .submission-status;
+
+  color: hsl(180.54, 100%, 21.96%);
+  background-color: hsl(180, 38.78%, 90.39%);
 }
