--- a/src/styles/components/ui/table.module.scss
+++ b/src/styles/components/ui/table.module.scss
@@ -60,9 +60,10 @@
   height: 3rem;
 
   //optional
-  padding-left: 1rem;
-  //padding-left: 0.5rem;
-  padding-right: 1rem;
+  //padding-left: 1rem;
+  padding-left: 0.5rem;
+  //padding-right: 1rem;
+  padding-right: 0.5rem;
 
   font-weight: 500;
 
@@ -77,8 +78,8 @@
 
 .table-cell {
   //optional
-  //padding: .5rem;
-  padding: 1rem;
+  padding: .5rem;
+  //padding: 1rem;
 
   vertical-align: middle;
 
