feat(admin): add delete faculty

--- a/src/styles/components/tables/faculty-tables/faculty-data-table.module.scss
+++ b/src/styles/components/tables/faculty-tables/faculty-data-table.module.scss
@@ -94,6 +94,12 @@
   height: 55px;
 }
 
+.no-result-row {
+  height: 6rem;
+
+  text-align: center;
+}
+
 .description-row {
   display: flex;
   justify-content: flex-end;
