--- a/src/styles/components/edit-user.module.scss
+++ b/src/styles/components/edit-user.module.scss
@@ -193,10 +193,14 @@
 
   &:focus-visible {
     box-shadow:
-      0 0 rgba(0, 0, 0, 0),
-      0 0 0 1px hsl(var(--ring)),
-      0 1px 2px 0 rgba(0, 0, 0, 0.05) !important;
+            0 0 rgba(0, 0, 0, 0),
+            0 0 0 1px hsl(var(--ring)),
+            0 1px 2px 0 rgba(0, 0, 0, 0.05) !important;
   }
+}
+
+.image-input {
+  margin: 0 !important;
 }
 
 .avatar-input {
@@ -261,7 +265,7 @@
 }
 
 .submit-btn {
-  margin-top: 1rem;
+  margin-top: 0 !important;
 }
 
 .icon {
