--- a/src/styles/components/tables/faculty-tables/faculty-data-table.module.scss
+++ b/src/styles/components/tables/faculty-tables/faculty-data-table.module.scss
@@ -11,6 +11,13 @@
   @media (min-width: 768px) {
     max-width: 24rem;
   }
+
+  &:focus-visible {
+    box-shadow:
+            0 0 rgba(0, 0, 0, 0),
+            0 0 0 1px hsl(var(--ring)),
+            0 1px 2px 0 rgba(0, 0, 0, 0.05) !important;
+  }
 }
 
 .select-trigger {
