feat: add accept and reject for pending blogs

--- a/src/styles/components/marketing-coor-blogs-list.module.scss
+++ b/src/styles/components/marketing-coor-blogs-list.module.scss
@@ -135,6 +135,28 @@
   display: flex;
 }
 
+.article-action-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  margin-top: 0.5rem;
+
+  @media (min-width: 768px) {
+    padding-left: calc(40px + 0.5rem);
+  }
+}
+
+.accept-btn {
+  color: hsl(180.54, 100%, 21.96%) !important;
+  background-color: hsl(180, 38.78%, 90.39%) !important;
+}
+
+.reject-btn {
+  //color: hsl(0 70% 40%) !important;
+  //background-color: hsl(0 100% 97%) !important;
+}
+
 .comment-btn {
   height: 36px !important;
 
