--- a/src/styles/components/student-blogs-list.module.scss
+++ b/src/styles/components/student-blogs-list.module.scss
@@ -11,10 +11,9 @@
 
   overflow-wrap: anywhere;
 
-  box-shadow:
-    0 0 #000,
-    0 0 #000,
-    0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 #000,
+  0 0 #000,
+  0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
 
 .article-wrapper {
@@ -26,11 +25,9 @@
 
   margin: 0 0 0.5rem;
 
-  box-shadow:
-    0 0 #000,
-    0 0 #000,
-    0 1px 2px 0 rgba(0, 0, 0, 0.05);
-
+  box-shadow: 0 0 #000,
+  0 0 #000,
+  0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
 
 .article-container {
@@ -38,6 +35,12 @@
 }
 
 .article-header-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.article-header-container {
   display: flex;
   //align-items: center;
 
@@ -57,6 +60,34 @@
 
 .author-name {
   font-weight: 600;
+}
+
+.status-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  text-transform: capitalize;
+}
+
+.upload-status {
+  display: inline-flex;
+  align-items: center;
+
+  color: hsl(180.54, 100%, 21.96%);
+  background-color: hsl(180, 38.78%, 90.39%);
+
+  width: fit-content;
+
+  border-radius: calc(0.5rem - 2px);
+
+  padding: 0.125rem 0.625rem;
+
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 500;
+
+  text-transform: capitalize;
 }
 
 .article-content-wrapper {
