--- a/src/styles/components/edit-faculty.module.scss
+++ b/src/styles/components/edit-faculty.module.scss
@@ -1,19 +1,29 @@
 @use "../variables" as var;
 
 .form {
-  width: 100%;
+  max-width: 72rem;
+
+  padding: 2.5rem 2.5rem 5rem;
+
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .wrapper {
   display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  @media (min-width: 1024px) {
+    flex-direction: row;
+  }
 }
 
 .form-container {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-
-  width: 30%;
+  flex: 1;
 }
 
 .form-item {
@@ -67,7 +77,7 @@
 .disabled-input {
   display: flex;
 
-  background-color: hsl(var(--muted));
+  background-color: hsl(var(--muted)) !important;
 
   max-width: 100% !important;
   width: 100%;
@@ -90,8 +100,12 @@
   flex-direction: column;
   gap: 5px;
 
-  width: 200px;
+  width: 100%;
   height: 160px;
+
+  @media (min-width: 1024px) {
+    width: 16.5rem;
+  }
 }
 
 .text {
