--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -184,6 +184,10 @@
   display: none;
 }
 
+.codex-editor__redactor {
+  padding: 0 !important;
+}
+
 //.codex-editor__redactor {
 //  @media (min-width: 651px) {
 //    margin-right: 60px;
