--- a/src/styles/components/layouts/admin-site-header.module.scss
+++ b/src/styles/components/layouts/admin-site-header.module.scss
@@ -33,13 +33,13 @@
 .logo {
   height: 3rem;
 
-  margin-right: .5rem;
+  margin-right: 0.5rem;
 }
 
 .site-header-option {
   display: flex;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
 .search {
@@ -158,8 +158,8 @@
   line-height: 20px !important;
 
   transition:
-          color 0.1s ease,
-          background-color 0.1s ease !important;
+    color 0.1s ease,
+    background-color 0.1s ease !important;
 }
 
 .dropdown-item-link {
@@ -179,7 +179,7 @@
 }
 
 .dropdown-separate-line {
-  margin: 12px 20px;
+  margin: 12px 20px !important;
 }
 
 .sign-out {
