--- a/src/styles/components/layouts/site-header.module.scss
+++ b/src/styles/components/layouts/site-header.module.scss
@@ -16,7 +16,7 @@
   justify-content: space-between;
   align-items: center;
 
-  height: 5rem;
+  height: 4rem;
 
   padding: 0 2rem;
 }
@@ -50,12 +50,54 @@
 }
 
 .search {
-  display: none !important;
-  margin-right: 8px;
+  position: relative;
 
-  @media (min-width: 1024px) {
-    display: inline-flex !important;
+  width: 2.25rem !important;
+
+  padding: 0 !important;
+
+  @media (min-width: 768px) {
+    justify-content: flex-start !important;
+
+    width: fit-content !important;
+    height: 2.5rem !important;
+
+    padding: 0.5rem 0.75rem !important;
   }
+
+  svg {
+    width: 1rem !important;
+    height: 1rem !important;
+
+    @media (min-width: 768px) {
+      margin-right: 0.5rem !important;
+    }
+  }
+}
+
+.search-span-metadata {
+  display: none;
+
+  @media (min-width: 768px) {
+    display: inline-flex;
+  }
+}
+
+.search-span {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+
+  border-width: 0;
+
+  padding: 0;
+
+  margin: -1px;
+
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
 }
 
 .avatar-trigger {
