--- a/src/styles/(settings)/recent-blogs/page.module.scss
+++ b/src/styles/(settings)/recent-blogs/page.module.scss
@@ -11,9 +11,35 @@
 
   overflow-wrap: anywhere;
 
-  box-shadow: 0 0 #000,
-  0 0 #000,
-  0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  box-shadow:
+    0 0 #000,
+    0 0 #000,
+    0 1px 2px 0 rgba(0, 0, 0, 0.05);
+}
+
+.action-row-wrapper {
+  display: flex;
+  justify-content: space-between;
+  gap: 0.5rem;
+
+  width: 100%;
+  height: 40px;
+
+  margin-bottom: 0.5rem;
+}
+
+.action-row-select {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.add-new-blog {
+  svg {
+    width: 1rem !important;
+    height: 1rem !important;
+
+    margin-right: 0.5rem;
+  }
 }
 
 .article-wrapper {
@@ -25,9 +51,10 @@
 
   margin: 0 0 0.5rem;
 
-  box-shadow: 0 0 #000,
-  0 0 #000,
-  0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  box-shadow:
+    0 0 #000,
+    0 0 #000,
+    0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
 
 .article-container {
