--- a/src/styles/(lobby)/page.module.scss
+++ b/src/styles/(lobby)/page.module.scss
@@ -7,150 +7,120 @@
   padding-bottom: 0 !important;
 }
 
-.layout {
+.faculty-carousel {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 
-  height: 100%;
   width: 100%;
-}
+  max-width: 1300px;
 
-.main-section {
-  width: 100%;
+  padding: 1.5rem 1rem 2rem;
 
   @media (min-width: 768px) {
-    width: 66.666667%;
-  }
-
-  @media (min-width: 1280px) {
-    //flex-basis: 75%;
-
-    //max-width: 1152px;
-    width: 75%;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 
-.content-wrapper {
-  position: relative;
-
-  width: 100%;
-
-  padding: 2em 0;
+.faculty-carousel-header {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  font-weight: 600;
 }
 
-.content-container {
-  width: 100%;
-
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-
-  @media (min-width: 576px) {
-    max-width: 540px;
-  }
-
-  @media (min-width: 768px) {
-    max-width: 720px;
-  }
-
-  @media (min-width: 992px) {
-    max-width: 960px;
-  }
-
-  @media (min-width: 1200px) {
-    max-width: 1140px;
-  }
-}
-
-.list-header-wrapper {
+.blog-card-header-wrapper {
   display: flex;
-  justify-content: center !important;
-  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
 
-  padding-bottom: 1.5rem !important;
-
-  margin-right: -15px;
-  margin-left: -15px;
+  margin: 0 0.5rem;
 }
 
-.list-header-container {
-  position: relative;
+.blog-card-header {
+  flex: 1;
 
-  width: 100%;
+  max-width: 58rem;
 
-  padding-right: 15px;
-  padding-left: 15px;
+  h3 {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+    font-weight: 700;
 
-  opacity: 0;
-
-  visibility: hidden;
-
-  text-align: center !important;
-
-  animation-duration: 0.5s;
-  animation-name: fadeInUp;
-  animation-fill-mode: both;
-
-  @media (min-width: 768px) {
-    flex: 0 0 100%;
-
-    max-width: 100%;
-  }
-
-  @keyframes fadeInUp {
-    0% {
-      opacity: 0;
-      visibility: hidden;
-      transform: translate3d(0, 40px, 0);
+    @media (min-width: 768px) {
+      font-size: 2.25rem;
+      line-height: 2.5rem;
     }
-    100% {
-      visibility: visible;
-      opacity: 1;
-      transform: none;
+  }
+
+  p {
+    color: hsl(var(--muted-foreground));
+
+    max-width: 46rem;
+
+    line-height: 1.5;
+
+    text-wrap: balance;
+
+    @media (min-width: 640px) {
+      font-size: 1.125rem;
+      line-height: 1.75rem;
     }
   }
 }
 
-.list-header {
-  display: block;
+.search {
+  position: relative;
 
-  color: #4986fc;
+  width: 2.25rem !important;
 
-  margin-bottom: 5px;
+  padding: 0 !important;
 
-  font-size: 13px;
-  font-weight: 600;
+  @media (min-width: 768px) {
+    justify-content: flex-start !important;
 
-  text-transform: uppercase;
-}
+    width: fit-content !important;
+    height: 2.5rem !important;
 
-.list-description {
-  margin-bottom: 1.5rem !important;
-
-  font-size: 34px;
-  font-weight: 600;
-  line-height: 1.4;
-}
-
-.faculty-wrapper {
-  display: flex;
-  justify-content: center !important;
-  flex-wrap: wrap;
-
-  margin-right: -15px;
-  margin-left: -15px;
-}
-
-.images-wrapper {
-  display: flex;
-
-  img {
-    height: 350px;
-
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+    padding: 0.5rem 0.75rem !important;
   }
+
+  svg {
+    width: 1rem !important;
+    height: 1rem !important;
+
+    @media (min-width: 768px) {
+      margin-right: 0.5rem !important;
+    }
+  }
+}
+
+.search-span-metadata {
+  display: none;
+
+  @media (min-width: 768px) {
+    display: inline-flex;
+  }
+}
+
+.search-span {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+
+  border-width: 0;
+
+  padding: 0;
+
+  margin: -1px;
+
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
 }
