fix(auth): fix logout

--- a/src/styles/(lobby)/page.module.scss
+++ b/src/styles/(lobby)/page.module.scss
@@ -26,7 +26,7 @@
   padding: 15px 0 80px 45px;
 
   h2 {
-    margin-left: 70px;
+    //margin-left: 0px;
 
     font-size: 2.2rem;
 
@@ -35,7 +35,7 @@
     }
 
     @media (min-width: 1024px) {
-      font-size: 3.8rem;
+      font-size: 3.4rem;
     }
   }
 }
