--- a/src/styles/(blog)/page.module.scss
+++ b/src/styles/(blog)/page.module.scss
@@ -67,15 +67,15 @@
   justify-content: center !important;
   align-items: center !important;
 
-  height: fit-content !important;
   width: fit-content !important;
+  height: fit-content !important;
+
+  color: hsl(var(--foreground)) !important;
+  background-color: transparent !important;
 
   padding: 0 !important;
 
   border-radius: 9999px !important;
-
-  color: hsl(var(--foreground)) !important;
-  background-color: transparent !important;
 
   &:hover {
     color: hsl(var(--foreground)) !important;
@@ -87,10 +87,24 @@
     height: 2.5rem;
 
     padding: 0.5rem;
+
+    transition-duration: 0.15s;
+    transition-property: fill, stroke;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+.current-like {
+  svg {
+    stroke: none;
+
+    fill: hsl(351.36, 100%, 76.86%) !important;
   }
 }
 
 .blog-content-wrapper {
+  flex: 1;
+
   color: hsl(var(--card-foreground));
   background-color: hsl(var(--card));
 
