--- a/src/styles/components/marketing-manager-blog-list.module.scss
+++ b/src/styles/components/marketing-manager-blog-list.module.scss
@@ -134,6 +134,30 @@
   font-weight: 600;
 }
 
+.guest-permission {
+  display: inline-flex;
+  align-items: center;
+
+  color: hsl(180.54, 100%, 21.96%);
+  background-color: hsl(180, 38.78%, 90.39%);
+
+  min-height: 1.75rem;
+
+  border-radius: 0.25rem;
+
+  padding: 0.3125rem 0.5rem;
+  margin-left: 0.5rem;
+
+  font-size: 0.875rem;
+
+  transition: all 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+
+  &[data-permission="false"] {
+    color: hsl(0, 70%, 40%);
+    background-color: hsl(0, 100%, 97%);
+  }
+}
+
 .article-comments-wrapper {
   display: flex;
 }
