--- a/src/styles/(account)/save-blogs/page.module.scss
+++ b/src/styles/(account)/save-blogs/page.module.scss
@@ -12,9 +12,34 @@
   overflow-wrap: anywhere;
 
   box-shadow:
-    0 0 #000,
-    0 0 #000,
-    0 1px 2px 0 rgba(0, 0, 0, 0.05);
+          0 0 #000,
+          0 0 #000,
+          0 1px 2px 0 rgba(0, 0, 0, 0.05);
+}
+
+.action-row-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.5rem;
+
+  width: 100%;
+  height: 40px;
+
+  margin-bottom: 0.5rem;
+}
+
+.action-row-select {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.add-new-blog {
+  svg {
+    width: 1rem !important;
+    height: 1rem !important;
+
+    margin-right: 0.5rem;
+  }
 }
 
 .article-wrapper {
@@ -27,9 +52,9 @@
   margin: 0 0 0.5rem;
 
   box-shadow:
-    0 0 #000,
-    0 0 #000,
-    0 1px 2px 0 rgba(0, 0, 0, 0.05);
+          0 0 #000,
+          0 0 #000,
+          0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
 
 .article-container {
@@ -76,9 +101,6 @@
   display: inline-flex;
   align-items: center;
 
-  color: hsl(180.54, 100%, 21.96%);
-  background-color: hsl(180, 38.78%, 90.39%);
-
   width: fit-content;
 
   border-radius: calc(0.5rem - 2px);
@@ -90,6 +112,21 @@
   font-weight: 500;
 
   text-transform: capitalize;
+
+  &[data-submit="pending"] {
+    color: hsl(var(--muted-foreground));
+    background-color: hsl(var(--muted));
+  }
+
+  &[data-submit="approve"] {
+    color: hsl(180.54, 100%, 21.96%);
+    background-color: hsl(180, 38.78%, 90.39%);
+  }
+
+  &[data-submit="reject"] {
+    color: hsl(0 70% 40%);
+    background-color: hsl(0 100% 97%);
+  }
 }
 
 .article-content-wrapper {
