--- a/src/styles/(lobby)/contribution/manage/page.module.scss
+++ b/src/styles/(lobby)/contribution/manage/page.module.scss
@@ -14,8 +14,6 @@
 .manage-card {
   display: flex;
 
-  width: 100%;
-
   margin: 0 1rem;
 }
 
@@ -30,7 +28,7 @@
   border-width: 1px;
   border-radius: calc(0.5rem - 4px);
 
-  margin: 0 0.5rem 0.5rem 0.5rem;
+  margin: 0 0.5rem 1.5rem 0.5rem;
 
   box-shadow:
     0 0 #000,
@@ -55,7 +53,7 @@
 }
 
 .count {
-  margin-top: 0.5rem;
+  margin-top: 1.5rem;
 
   font-size: 2em;
   font-weight: bold;
@@ -63,4 +61,6 @@
 
 .chart {
   width: 100%;
+
+  margin-bottom: 1.5rem;
 }
