--- a/src/styles/components/layouts/admin-site-header.module.scss
+++ b/src/styles/components/layouts/admin-site-header.module.scss
@@ -16,30 +16,103 @@
   justify-content: space-between;
   align-items: center;
 
-  height: 3.5rem;
+  height: 4rem;
 
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
-.site-header-logo {
-  display: none;
+.outer-nav-action {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  @media (min-width: 1024px) {
-    display: block;
+.nav-action {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
+  height: 2.5rem;
+}
+
+.nav-option {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  margin-left: 8px;
+
+  @media (min-width: 768px) {
+    flex: 1;
+
+    margin-left: 0;
   }
 }
 
-.logo {
-  height: 3rem;
+.search {
+  position: relative;
 
-  margin-right: 0.5rem;
+  width: 2.25rem !important;
+
+  padding: 0 !important;
+
+  @media (min-width: 768px) {
+    justify-content: flex-start !important;
+
+    width: fit-content !important;
+    height: 2.5rem !important;
+
+    padding: 0.5rem 0.75rem !important;
+  }
+
+  svg {
+    width: 1rem !important;
+    height: 1rem !important;
+
+    @media (min-width: 768px) {
+      margin-right: 0.5rem !important;
+    }
+  }
+}
+
+.search-span-metadata {
+  display: none;
+
+  @media (min-width: 768px) {
+    display: inline-flex;
+  }
+}
+
+.search-span {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+
+  border-width: 0;
+
+  padding: 0;
+
+  margin: -1px;
+
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
 }
 
 .site-header-option {
   display: flex;
+  justify-content: flex-end;
   align-items: center;
-  gap: 0.5rem;
+
+  margin-left: 8px;
+
+  @media (min-width: 768px) {
+    flex: 1;
+
+    margin-left: 0;
+  }
 }
 
 .search {
