feat(auth): change ui layout

--- a/src/styles/(auth)/(protected-auth)/set-password/page.module.scss
+++ b/src/styles/(auth)/(protected-auth)/set-password/page.module.scss
@@ -67,7 +67,7 @@
   }
 
   a {
-    color: hsl(var(--foreground));
+    color: hsl(232.55, 68.84%, 60.98%);
 
     font-size: 0.875rem;
     line-height: 1.25rem;
