--- a/src/styles/components/forms/set-password-form.module.scss
+++ b/src/styles/components/forms/set-password-form.module.scss
@@ -16,8 +16,8 @@
     outline: 2px solid transparent !important;
 
     box-shadow:
-            0 0 0 1px hsl(240 4.9% 83.9%),
-            0 1px 2px 0 rgba(0, 0, 0, 0.05) !important;
+      0 0 0 1px hsl(240 4.9% 83.9%),
+      0 1px 2px 0 rgba(0, 0, 0, 0.05) !important;
   }
 }
 
@@ -36,6 +36,14 @@
   border-width: 0;
 
   clip: rect(0, 0, 0, 0);
+}
+
+.login {
+  background-color: hsl(232.55, 68.84%, 60.98%) !important;
+
+  &:hover {
+    background-color: hsl(234.22, 80.84%, 67.25%) !important;
+  }
 }
 
 .icon {
