--- a/src/styles/(lobby)/page.module.scss
+++ b/src/styles/(lobby)/page.module.scss
@@ -76,6 +76,11 @@
   font-weight: 600;
 }
 
+.top-contributors-card {
+  max-width: 1350px;
+  width: 100%;
+}
+
 .blog-card {
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -129,6 +134,60 @@
       font-size: 1.125rem;
       line-height: 1.75rem;
     }
+  }
+}
+
+.top-contributors {
+  display: grid;
+  gap: 1rem;
+
+  width: 100%;
+  max-width: 1350px;
+
+  margin-top: 2rem;
+
+  @media (min-width: 480px) {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  @media (min-width: 1024px) {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
+
+.blog-author-details {
+  display: flex;
+  align-items: center;
+  flex: 1;
+
+  margin-bottom: 1.25rem;
+}
+
+.author-name-wrapper {
+  display: flex;
+  align-items: center;
+  flex: 1;
+
+  padding-left: 0.75rem;
+
+  p {
+    color: hsl(var(--muted-foreground));
+
+    font-size: 0.75rem;
+  }
+}
+
+.author-name {
+  font-weight: 700;
+
+  cursor: pointer;
+
+  &:hover {
+    color: rgb(47, 58, 178);
   }
 }
 
